# motionControl

./: CMakeLists.txt  Dockerfile  Makefile  Readme.md  design.md  flight_simulator.cpp  main.cpp  meson.build  motion_control.hpp
.github/workflows/: ci.yml
cmake/: CPM.cmake
include/: networking.hpp
src/: main.cpp
test/: CMakeLists.txt  main.cpp
