include(GoogleTest)
add_executable(NetworkingTests main.cpp)
target_link_libraries(NetworkingTests PRIVATE ${dependencies} GTest::gtest_main)
gtest_discover_tests(NetworkingTests DISCOVERY_TIMEOUT 60)
add_executable(NetworkBenchmarks benchmark.cpp)
target_link_libraries(NetworkBenchmarks PRIVATE ${dependencies} benchmark::benchmark_main )